--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
 
   <script src="vendor/pristine/pristine.min.js"></script>
   <script src="vendor/nouislider/nouislider.js"></script>
+  <script src="js/preview.js"></script>
   <script src="js/main.js" type="module"></script>
 </body>
 </html>
